--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     },
     "require-dev": {
         "laravel/framework": "^10.0",
-        "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.12"
+        "orchestra/testbench": "^8.12",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
